# botzia

./: .eslintrc.json  .ignore  Cargo.toml  LICENSE  README.md  config.json  deploy-commands.ts  package-lock.json  package.json  rustfmt.toml  schema.sql  shard.js  shard.ts  tsconfig.json
assets/dungeon_defenders/: leveldata.json
assets/monster_hunter_world/: monster_data.json
bot/: api.js  api.ts  bot.js  bot.ts  command.js  command.ts  database.ts  event.js  event.ts  main.js  main.ts  mhw.ts  pagehandler.ts  slash.ts  slashcommand.ts  textcommand.ts  utils.ts
commands/categories/: dd.ts  dev.ts  mhw.ts  probability.ts
commands/dd/: color.ts  howmanyruns.ts  levelinfo.ts  ltrange.ts  quote.ts  res.ts
commands/dev/: beep.js  build.ts  db.ts  embed.js  reload.js  reload.ts  restart.ts
commands/general/: avatar.ts  commandstats.ts  dynamictime.ts  help.js  help.ts  poll.js  poll.ts  prefix.js  prefix.ts  remindme.js  remindme.ts  res.ts  spongetext.ts  trivia.js  trivia.ts  unitconvert.js  unitconvert.ts  units.ts  word.ts  wordle.ts
commands/mhw/: hzv.ts  list.ts  rollhunt.ts
commands/moderation/: ban.js  ban.ts  kick.js  kick.ts  massmove.ts  purge.js  purge.ts  timeout.js  timeout.ts
commands/pp/: bank.ts  flight.ts  levels.ts  pathfind.ts  slot.ts  xp.ts
commands/probability/: howlucky.ts  howmanyruns.ts
database/discord/: remindme_jobs.db  server_prefixes.db
events/: interaction.ts  message.js  message.ts  messageCreate.ts  ready.js  ready.ts
src/: color.rs  database.rs  handler.rs  interaction.rs  main.rs
utils/: dwg.ts  utilities.ts
(+100 files in other folders)
