[package]
name = "botzia"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.21.0"
anyhow = "1.0.71"
serenity = { version = "0.11.6", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
shuttle-secrets = "0.21.0"
shuttle-serenity = "0.21.0"
tokio = "1.29.1"
tracing = "0.1.37"
rand = "0.8"