[package]
name = "botzia"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4"
color-thief = "0.2"
image = "0.24"
rand = "0.8"
regex = "1"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.11.6", default-features = false, features = ["cache", "client", "collector", "gateway", "model", "rustls_backend"] }
shuttle-runtime = "0.21.0"
shuttle-secrets = "0.21.0"
shuttle-serenity = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
thousands = "0.2"
tokio = "1.29.1"
tracing = "0.1.37"